--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,15 @@
     <string name="app_name">GetIn</string>
     <string name="log_in">Log In</string>
     <string name="continuer_autant_que">Continuer autant que ...</string>
+    <string name="ajouter_annonce">Ajouter une annonce</string>
     <string name="covoitureur">Covoitureur</string>
     <string name="covoituré">Covoituré</string>
+    <string name="point_de_depart">Point de départ</string>
+    <string name="point_d_arrivee">Point d\'arrivée</string>
+    <string name="temps_de_depart">Temps de départ</string>
+    <string name="temps_d_arrivee">Temps d\'arrivée</string>
+    <string name="nombre_de_places_ndisponibles">Nombre de places\ndisponibles</string>
+    <string name="prix">Prix</string>
+    <string name="description">Description</string>
+    <string name="nombre_de_personnes">Nombre de personnes</string>
 </resources>
