added insert annonce covoiture + covoitureur (works) added seriablizable to model

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,6 @@
     <string name="mes_annonces">Mes annonces</string>
     <string name="mes_demandes">Mes demandes</string>
     <string name="deconnecter">Se déconnecter</string>
+    <string name="voiture_associee">Info de voiture</string>
+    <string name="suivant">Suivant</string>
 </resources>
